# dhti

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  cql-dev.yml  debug.sh  debug2.sh  demo.sh  demo2.sh  dev-demo.sh  docker-compose-dev.yml  docker-compose.yml  e2e.sh  hierarchy.html  index.html  manual.sh  modules.html  ollama-dev.yml  ollama-neo4j-dev.yml  ollama-redis-dev.yml  package-lock.json  package.json  test.http  tsconfig.json  typedoc.json  validateskill.sh
.agents/skills/conch-generator/: README.md  SKILL.md
.agents/skills/conch-generator/examples/: conch-sample-request.md
.agents/skills/elixir-generator/: README.md  SKILL.md
.agents/skills/elixir-generator/examples/: basic-request.md
.agents/skills/start-dhti/: README.md  SKILL.md
.agents/skills/start-dhti/examples/: e2e-sample.md  quick-start.md
.claude/skills/conch-generator/: SKILL.md
.claude/skills/conch-generator/examples/: conch-sample-request.md
.claude/skills/elixir-generator/: SKILL.md
.claude/skills/elixir-generator/examples/: basic-request.md  glycemic-example.md
.claude/skills/start-dhti/: README.md  SKILL.md
.claude/skills/start-dhti/examples/: glycemic-control-app.md  quick-start.md
.github/skills/conch-generator/: SKILL.md
.github/skills/conch-generator/examples/: conch-sample-request.md
.github/skills/elixir-generator/: README.md  SKILL.md
.github/skills/elixir-generator/examples/: basic-request.md
.github/skills/start-dhti/: SKILL.md
.github/skills/start-dhti/examples/: quick-start.md
.github/workflows/: bump.yml  docs.yml  main.yml  onPushToMain.yml  onRelease.yml  pr.yml  publish.yml  test.yml
assets/: highlight.css  navigation.js  search.js
cds-hooks-sandbox/src/reducers/: patient-reducers.js
cds-hooks-sandbox/tests/reducers/: patient-reducers.test.js
cli/: README.md  docker-compose-dev.yml  docker-compose.yml  package.json
cli/src/commands/: compose.ts  conch.ts  elixir.ts
cli/src/resources/: docker-compose-master.yml
cli/src/resources/genai/: pyproject.toml
cli/src/resources/genai/app/: bootstrap.py  server.py
cli/src/resources/spa/: Dockerfile
cli/src/resources/spa/def/: importmap.json  spa-assemble-config.json
cli/test/commands/: conch.test.ts
demos/: demo.sh  docktor.sh  orthanc.sh  packages.sh
docker-compose/: docker-compose.yml  ollama-neo4j-dev.yml
docktor/: Dockerfile  Dockerfile-go  go.mod  go.sum  mcp.go  requirements.txt  server.py
documents/: README.html
functions/: Cards.html  handleBundle.html  run.html  src.Cards.html  src.handleBundle.html  src.run.html
gateway/: nginx.conf
genai/: Dockerfile  install-wheel.sh  pyproject.toml
genai/app/: bootstrap.py  redis_schema.yaml  server.py
genai/genai/: server.py
modules/: src.html
mpclient/: Dockerfile  app.js  package.json
nginx/: Dockerfile  nginx.conf
notes/: CLI.md  COMPOSE-ENV-SUMMARY.md  COPILOT.md  DOCKTOR.md  OLD_README.md  README.md  SYNTHEA.md  add-llm.md  cheatsheet.md  cli-options.md  cli.md  compose-env.md  config.json  copilot-sdk-dhti.md  cql2elm.http  dev-copy.md  docker.md  elixir-start.md  esm-routes.md  fhir_prompt.txt  files.md  instructions.md  langchain.http  langserve.md  local-directory-installation.md  logo.md  medplum  medplum.md  monorepo-support.md  new-README.md  old_demo.sh  ollama.http  prompt.txt  routes.md  setup-ollama.md  skills.md  slots.md  spa-steps.md  steps.md  test.http
prompts/: conch-sample-request.md  e2e-sample.md  elixir-agent.md  elixir-sample-request.md  elixir.md  openmrs-conch-agent.md
scripts/: copy-frontend.sh
spa/: Dockerfile  importmap.json  routes.registry.json  spa-assemble-config.json
src/: index.ts
src/commands/: compose.ts  conch.ts  copilot.ts  docker.ts  docktor.ts  elixir.ts  mimic.ts  synthea.ts  synthetic.ts
src/commands/utils/: bootstrap.ts  chain.ts
src/resources/: docker-compose-master.yml  mcp.json
src/resources/docktor/pyhealth/: Dockerfile  requirements.txt  server.py
src/resources/genai/: Dockerfile  install-wheel.sh  pyproject.toml
src/resources/genai/app/: bootstrap.py  server.py
src/resources/spa/: Dockerfile  README.md  config-schema.ts  createDashboardLink.component.tsx  dashboard.meta.ts  glycemic.component.tsx  glycemic.scss  index.ts  routes.json
src/resources/spa/def/: routes.registry.json
src/resources/spa/hooks/: useDhti.ts  usePatient.ts
src/resources/spa/models/: card.ts
src/utils/: bootstrap.ts  card.ts  chain.ts  getCard.ts  index.ts  request.ts  useDhti.ts
test/: tsconfig.json
test/commands/: compose.test.ts  conch.test.ts  copilot.test.ts  docker.test.ts  docktor.test.ts  elixir.test.ts  mimic.test.ts  synthea.test.ts  synthetic.test.ts
test/e2e/: demo.e2e.test.ts
test/utils/: card.test.ts  chain.test.ts  getCard.test.ts  request.test.ts  test.useDhti.ts  useDhti.test.ts
tests/: cql1.http  ollama.http
vidhi/: README.md  chatbot.sh  dicom.sh  docktor.sh  rag.sh
