[tool.poetry]
name = "genai"
version = "0.0.1"
description = ""
authors = ["Nuno Campos <nuno@langchain.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
langchain-core = ">=0.1.5"
kink = "^0.8.0"
python-dotenv = "^1.0.1"
redis = "^5.0.4"
langchain-community = "^0.2.1"
langserve = { version = "^0.0.51", extras = ["server"] }
langfuse = "^2.31.0"
tiktoken = "^0.4.0"
fastapi = "^0.96.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
overrides = "^7.7.0"
fhiry = { file = "whl/fhiry-0.0.0-py2.py3-none-any.whl" }
dhti_elixir_base = { file = "whl/dhti_elixir_base-0.0.1-py3-none-any.whl" }
dhti_elixir_fhire = { file = "whl/dhti_elixir_fhire-0.0.1-py3-none-any.whl" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.21.1"
mypy = "^1.4.1"
ruff = "^0.0.278"
black = "^23.7.0"
syrupy = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"

[tool.pytest.ini_options]
# --strict-markers will raise errors on unknown marks.
# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
#
# https://docs.pytest.org/en/7.1.x/reference/reference.html
# --strict-config       any warnings encountered while parsing the `pytest`
#                       section of the configuration file raise errors.
#
# https://github.com/tophat/syrupy
# --snapshot-warn-unused    Prints a warning on unused snapshots rather than fail the test suite.
addopts = "--strict-markers --strict-config --durations=5 --snapshot-warn-unused"